welcome.lessons.welcome.loopfor.LoopStairs.scala.error
Runner:1: error: not found: value magenta
var cou:Color = magenta ; 
                ^Runner:2: error: not found: value setBrosseCouleur
setBrosseCouleur(cou);
^