welcome.lessons.welcome.loopfor.LoopStairs.scala.code
var cou:Color = magenta ; 
setBrosseCouleur(cou);
baisseBrosse();
avance();